# CRMs_5_backend

./: BUILD_COMPLETE.md  Dockerfile  README.md  RESEND_SETUP.md  docker-compose.yml  kafka_client.py  main.py  pyproject.toml  run_schema.py
agent/: customer_success_agent.py  formatters.py  prompts.py  tools.py
channels/: gmail_handler.py  resend_handler.py  smtp_handler.py  web_form_handler.py  whatsapp_handler.py
database/: queries.py  schema.sql  seed.sql
database/migrations/: embed_knowledge_base.py
k8s/: configmap.yaml  deployment-api.yaml  deployment-whatsapp-poller.yaml  deployment-worker.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml
tests/: test_agent.py  test_multichannel_e2e.py
workers/: message_processor.py  whatsapp_poller.py
